src/objects/Market__c.object
<CustomObject>
    <fields>
        <fullName>Active_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Flag</description>
        <inlineHelpText>Active Flag</inlineHelpText>
        <label>Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Marketing_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Direct Marketing Center</description>
        <inlineHelpText>Direct Marketing Center</inlineHelpText>
        <label>Direct Marketing Center</label>
        <referenceTo>Direct_Marketing_Center__c</referenceTo>
        <relationshipLabel>Market</relationshipLabel>
        <relationshipName>Market</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>For use in data migrations.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Market_Code__c</fullName>
        <description>Market Code</description>
        <globalPicklist>Market</globalPicklist>
        <label>Market Code</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POD__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>POD associated with this market</description>
        <inlineHelpText>POD associated with this market</inlineHelpText>
        <label>POD</label>
        <referenceTo>POD__c</referenceTo>
        <relationshipLabel>Market</relationshipLabel>
        <relationshipName>Market</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <globalPicklist>Time_Zone</globalPicklist>
        <label>Time Zone</label>
        <type>Picklist</type>
    </fields>
    <label>Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>External_ID__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Market_Code__c</columns>
        <columns>POD__c</columns>
        <columns>Direct_Marketing_Center__c</columns>
        <columns>Active_Flag__c</columns>
        <columns>Time_Zone__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>